--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Intro",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/ericsecution/mern-crud-blog/issues"
   },
-  "homepage": "https://github.com/ericsecution/mern-crud-blog#readme"
+  "homepage": "https://github.com/ericsecution/mern-crud-blog#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.4.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0"
+  }
 }
