--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern-crud-blog",
   "version": "1.0.0",
   "description": "## Intro",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
